fixed some more queries and some jk stuff